# template-library

./: CHANGELOG.md  LICENSE  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: docs.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/_templates/autosummary/: class.rst  module.rst
docs/source/api/: index.rst
docs/source/how-tos/: howto-1.rst  howto-2.rst  index.rst
docs/source/how-tos/howto-3/: howto-31.rst  howto-32.rst  index.rst
docs/source/topics/: index.rst  topic-1.rst  topic-2.rst
docs/source/topics/topic-3/: index.rst  topic-31.rst  topic-32.rst
docs/source/tutorials/: index.rst  tutorial-1.rst  tutorial-2.rst
docs/source/tutorials/tutorial-3/: index.rst  tutorial-31.rst  tutorial-32.rst
notes/: about-project.md  github-workflows.md  main-features.md  multiversion-docs.md  notes-todos.md  pre-release-checklist.md  project-layout.md  publish-release.md  versioning-commiting-changelog.md
scripts/: build_serve_multiversion_docs.sh  check_versions.py  serve_docs.py
src/template_library/: __init__.py  my_module.py  other_module.py
tests/integration/: integrity_test.py
tests/unit/: test_my_module.py  test_other_module.py
